# glimpse

./: .geminiInfo  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile.deb  Dockerfile.deb-amd64  Dockerfile.deb-arm64  Makefile.toml  PULL_REQUEST_TEMPLATE.md  README.md  REVIEWER_SETUP.md  URL_LIST.md
.cargo/: config.toml
.cargo-husky/hooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: create-homebrew-pr.yml  homebrew-release.yml  release.disabled  release.yml  rust-clippy.yml  rust-tests.yml  semantic-release-pr.yml  semantic-release.yml
Formula/: glimpse.rb
docker/: Dockerfile  docker-compose-build-dpkg.yaml  dpkg.sh
output/linux_amd64/: glimpse_1.0.0-1_amd64.deb
output/linux_arm64/: glimpse_1.0.0-1_arm64.deb
scripts/: build-deb-all.sh  compile-all.sh  create-homebrew-pr.sh  install-hooks.sh  pipeline-run.sh  prepare-deb-packages-2.sh  prepare-deb-packages.sh  release.sh
src/: lib.rs  main.rs
