[package]
name = "glimpse"
version = "1.0.0"
edition = "2024"

[dependencies]
colored = "3.1.1"
fs = "0.0.5"
rand = "0.10.0"
tempfile = "3.25.0"

[alias]
commit = "run --bin semantic-commit"
sc = "run --bin semantic-commit"
brew-publish = "run --bin homebrew-publish"
brew = "run --bin homebrew-publish"
hb = "run --bin homebrew-publish"

[dev-dependencies]
tempfile = "3.25.0"
