[package]
name = "glimpse"
github = "https://github.com/ckissmann/glimpse"
version = "1.0.0"
edition = "2024"

[dependencies]
colored = "3.1.1"
dialoguer = "0.12.0"
fs = "0.0.5"
rand = "0.10.0"
tempfile = "3.25.0"

[dev-dependencies]
tempfile = "3.25.0"
cargo-husky = { version = "1.5.0", default-features = false, features = ["user-hooks"] }

[[bin]]
name = "glimpse"
path = "src/main.rs"

[[bin]]
name = "commit"
path = "src/bin/commit.rs"
